@@ -37,7 +37,36 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- H2 Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>runtime</scope>
+        </dependency>
+        
+
+        <!-- Hibernate Core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.4.4.Final</version>
+        </dependency>
+
+
+
+        <!-- Jakarta Persistence API -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
     </dependencies>
+
+
 
     <build>
         <plugins>
@@ -45,6 +74,20 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.4.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.1.0.Final</version>
+                <configuration>
+                    <skip>false</skip>
+                    <javaOpts>
+                        <javaOpt>-Xms256m</javaOpt>
+                        <javaOpt>-Xmx1024m</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.security=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.lang=ALL-UNNAMED</javaOpt>
+                    </javaOpts>
+                </configuration>
             </plugin>
         </plugins>
     </build>
